touched and edited

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="./img/zuri.favicon.png" rel="icon" sizes="16x16 32x32" type="image/png">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
+<body class="page1">
     <main>
         <section id="main-container">
         <div class="container-content">
@@ -23,7 +23,9 @@
                    their mission-critical <span>projects and goals</span></p>
             </div>
             <div class="btns">
+                <a href="page2.html">
                 <button class="btn btn-orange" type="button">I'm new to the Industry</button>
+                </a>
                 <button class="btn btn-white" type="button">I need industry exprience</button>
             </div>
         </div>
