--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zuri | Learn, Bulid, Grow.</title>
     <link href="./img/zuri.favicon.png" rel="icon" sizes="16x16 32x32" type="image/png">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body class="page1">
     <main>
